--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="text" />
     <dimen name="text_size_large">56dp</dimen>
     <dimen name="text_size">24dp</dimen>
+    <dimen name="text_v">15dp</dimen>
 </resources>
